--- a/FLOPopupPrototypes/UI/Storyboards/Main.storyboard
+++ b/FLOPopupPrototypes/UI/Storyboards/Main.storyboard
@@ -1,9 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.Cocoa.Storyboard.XIB" version="3.0" toolsVersion="14113" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none" useAutolayout="YES" initialViewController="B8D-0N-5wS">
+<document type="com.apple.InterfaceBuilder3.Cocoa.Storyboard.XIB" version="3.0" toolsVersion="15705" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none" useAutolayout="YES" initialViewController="B8D-0N-5wS">
     <dependencies>
         <deployment identifier="macosx"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.CocoaPlugin" version="14113"/>
-        <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.CocoaPlugin" version="15705"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -624,7 +623,7 @@
                                         <menuItem title="Show Sidebar" keyEquivalent="s" id="kIP-vf-haE">
                                             <modifierMask key="keyEquivalentModifierMask" control="YES" command="YES"/>
                                             <connections>
-                                                <action selector="toggleSourceList:" target="Ady-hI-5gd" id="iwa-gc-5KM"/>
+                                                <action selector="toggleSidebar:" target="Ady-hI-5gd" id="iwa-gc-5KM"/>
                                             </connections>
                                         </menuItem>
                                         <menuItem title="Enter Full Screen" keyEquivalent="f" id="4J7-dP-txa">
@@ -728,14 +727,14 @@
                                     <customView translatesAutoresizingMaskIntoConstraints="NO" id="xay-PV-jAd" userLabel="Change Mode View Container">
                                         <rect key="frame" x="5" y="5" width="40" height="40"/>
                                         <subviews>
-                                            <button verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="4P3-pJ-IwM" userLabel="Btn Change Mode">
+                                            <button verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="4P3-pJ-IwM" userLabel="Btn Change Mode" customClass="DoubleClickButton">
                                                 <rect key="frame" x="0.0" y="0.0" width="40" height="40"/>
                                                 <buttonCell key="cell" type="bevel" bezelStyle="rounded" image="ic_switch_mode" imagePosition="only" alignment="center" imageScaling="proportionallyDown" inset="2" id="Ss8-Oo-Zez">
                                                     <behavior key="behavior" pushIn="YES" lightByBackground="YES" lightByGray="YES"/>
                                                     <font key="font" metaFont="system"/>
                                                 </buttonCell>
                                                 <connections>
-                                                    <action selector="btnChangeMode_clicked:" target="XfG-lQ-9wD" id="7cD-0w-kEA"/>
+                                                    <action selector="btnChangeModeClicked:" target="XfG-lQ-9wD" id="7cD-0w-kEA"/>
                                                 </connections>
                                             </button>
                                         </subviews>
@@ -750,14 +749,14 @@
                                     <customView translatesAutoresizingMaskIntoConstraints="NO" id="24A-hG-ZdQ" userLabel="Finder View Container">
                                         <rect key="frame" x="50" y="5" width="40" height="40"/>
                                         <subviews>
-                                            <button verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="diw-HF-RaI" userLabel="Btn Open Finder">
+                                            <button verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="diw-HF-RaI" userLabel="Btn Open Finder" customClass="DoubleClickButton">
                                                 <rect key="frame" x="0.0" y="0.0" width="40" height="40"/>
                                                 <buttonCell key="cell" type="bevel" bezelStyle="rounded" image="ic_finder" imagePosition="only" alignment="center" imageScaling="proportionallyDown" inset="2" id="wB9-cu-mp7">
                                                     <behavior key="behavior" pushIn="YES" lightByBackground="YES" lightByGray="YES"/>
                                                     <font key="font" metaFont="system"/>
                                                 </buttonCell>
                                                 <connections>
-                                                    <action selector="btnOpenFinder_clicked:" target="XfG-lQ-9wD" id="ZyY-Q3-IVS"/>
+                                                    <action selector="btnOpenFinderClicked:" target="XfG-lQ-9wD" id="ZyY-Q3-IVS"/>
                                                 </connections>
                                             </button>
                                         </subviews>
@@ -772,14 +771,14 @@
                                     <customView translatesAutoresizingMaskIntoConstraints="NO" id="uUK-hZ-BLj" userLabel="Safari View Container">
                                         <rect key="frame" x="95" y="5" width="40" height="40"/>
                                         <subviews>
-                                            <button verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="vYx-ID-mZ0" userLabel="Btn Open Safari">
+                                            <button verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="vYx-ID-mZ0" userLabel="Btn Open Safari" customClass="DoubleClickButton">
                                                 <rect key="frame" x="0.0" y="0.0" width="40" height="40"/>
                                                 <buttonCell key="cell" type="bevel" bezelStyle="rounded" image="ic_safari" imagePosition="only" alignment="center" imageScaling="proportionallyDown" inset="2" id="BAT-9e-VzT">
                                                     <behavior key="behavior" pushIn="YES" lightByBackground="YES" lightByGray="YES"/>
                                                     <font key="font" metaFont="system"/>
                                                 </buttonCell>
                                                 <connections>
-                                                    <action selector="btnOpenSafari_clicked:" target="XfG-lQ-9wD" id="bqd-bj-xHA"/>
+                                                    <action selector="btnOpenSafariClicked:" target="XfG-lQ-9wD" id="bqd-bj-xHA"/>
                                                 </connections>
                                             </button>
                                         </subviews>
@@ -794,14 +793,14 @@
                                     <customView translatesAutoresizingMaskIntoConstraints="NO" id="aa2-os-uBc" userLabel="Google View Container">
                                         <rect key="frame" x="140" y="5" width="40" height="40"/>
                                         <subviews>
-                                            <button verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="vxD-Us-bQh" userLabel="Btn Open Google">
+                                            <button verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="vxD-Us-bQh" userLabel="Btn Open Google" customClass="DoubleClickButton">
                                                 <rect key="frame" x="0.0" y="0.0" width="40" height="40"/>
                                                 <buttonCell key="cell" type="bevel" bezelStyle="rounded" image="ic_google" imagePosition="only" alignment="center" imageScaling="proportionallyDown" inset="2" id="zfG-IW-WNE">
                                                     <behavior key="behavior" pushIn="YES" lightByBackground="YES" lightByGray="YES"/>
                                                     <font key="font" metaFont="system"/>
                                                 </buttonCell>
                                                 <connections>
-                                                    <action selector="btnOpenGoogle_clicked:" target="XfG-lQ-9wD" id="pHn-Lv-ILR"/>
+                                                    <action selector="btnOpenGoogleClicked:" target="XfG-lQ-9wD" id="pHn-Lv-ILR"/>
                                                 </connections>
                                             </button>
                                         </subviews>
@@ -816,14 +815,14 @@
                                     <customView translatesAutoresizingMaskIntoConstraints="NO" id="uQl-Vp-Bbc" userLabel="Films View Container">
                                         <rect key="frame" x="185" y="5" width="98" height="40"/>
                                         <subviews>
-                                            <button verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="Bii-Nb-7uf" userLabel="Btn Open Films">
+                                            <button verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="Bii-Nb-7uf" userLabel="Btn Open Films" customClass="DoubleClickButton">
                                                 <rect key="frame" x="10" y="0.0" width="78" height="40"/>
                                                 <buttonCell key="cell" type="bevel" title="Films popup" bezelStyle="rounded" alignment="center" imageScaling="proportionallyDown" inset="2" id="98a-oC-yre">
                                                     <behavior key="behavior" pushIn="YES" lightByBackground="YES" lightByGray="YES"/>
                                                     <font key="font" metaFont="system"/>
                                                 </buttonCell>
                                                 <connections>
-                                                    <action selector="btnOpenFilms_clicked:" target="XfG-lQ-9wD" id="j3m-Pl-H1v"/>
+                                                    <action selector="btnOpenFilmsClicked:" target="XfG-lQ-9wD" id="j3m-Pl-H1v"/>
                                                 </connections>
                                             </button>
                                         </subviews>
@@ -837,14 +836,14 @@
                                     <customView translatesAutoresizingMaskIntoConstraints="NO" id="hH7-0V-lua" userLabel="News View Container">
                                         <rect key="frame" x="288" y="5" width="100" height="40"/>
                                         <subviews>
-                                            <button verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="QKT-rF-oHD" userLabel="Btn Open News">
+                                            <button verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="QKT-rF-oHD" userLabel="Btn Open News" customClass="DoubleClickButton">
                                                 <rect key="frame" x="10" y="0.0" width="80" height="40"/>
                                                 <buttonCell key="cell" type="bevel" title="News popup" bezelStyle="rounded" alignment="center" imageScaling="proportionallyDown" inset="2" id="LvO-Th-u2i">
                                                     <behavior key="behavior" pushIn="YES" lightByBackground="YES" lightByGray="YES"/>
                                                     <font key="font" metaFont="system"/>
                                                 </buttonCell>
                                                 <connections>
-                                                    <action selector="btnOpenNews_clicked:" target="XfG-lQ-9wD" id="eqx-bg-033"/>
+                                                    <action selector="btnOpenNewsClicked:" target="XfG-lQ-9wD" id="eqx-bg-033"/>
                                                 </connections>
                                             </button>
                                         </subviews>
@@ -858,14 +857,14 @@
                                     <customView translatesAutoresizingMaskIntoConstraints="NO" id="4xE-ia-sMm" userLabel="Comics View Container">
                                         <rect key="frame" x="2678" y="5" width="112" height="40"/>
                                         <subviews>
-                                            <button verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="95S-F2-TuG" userLabel="Btn Open Comics">
+                                            <button verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="95S-F2-TuG" userLabel="Btn Open Comics" customClass="DoubleClickButton">
                                                 <rect key="frame" x="10" y="0.0" width="92" height="40"/>
                                                 <buttonCell key="cell" type="bevel" title="Comics popup" bezelStyle="rounded" alignment="center" imageScaling="proportionallyDown" inset="2" id="fmG-De-ekK">
                                                     <behavior key="behavior" pushIn="YES" lightByBackground="YES" lightByGray="YES"/>
                                                     <font key="font" metaFont="system"/>
                                                 </buttonCell>
                                                 <connections>
-                                                    <action selector="btnOpenComics_clicked:" target="XfG-lQ-9wD" id="h9D-vM-alg"/>
+                                                    <action selector="btnOpenComicsClicked:" target="XfG-lQ-9wD" id="h9D-vM-alg"/>
                                                 </connections>
                                             </button>
                                         </subviews>
@@ -879,14 +878,14 @@
                                     <customView translatesAutoresizingMaskIntoConstraints="NO" id="dAj-4e-xyd" userLabel="Second Bar View Container">
                                         <rect key="frame" x="2544" y="5" width="129" height="40"/>
                                         <subviews>
-                                            <button verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="922-Oc-zMC" userLabel="Btn Show Second Bar">
+                                            <button verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="922-Oc-zMC" userLabel="Btn Show Second Bar" customClass="DoubleClickButton">
                                                 <rect key="frame" x="10" y="0.0" width="109" height="40"/>
                                                 <buttonCell key="cell" type="bevel" title="Show second bar" bezelStyle="rounded" alignment="center" imageScaling="proportionallyDown" inset="2" id="KLK-IY-RUh">
                                                     <behavior key="behavior" pushIn="YES" lightByBackground="YES" lightByGray="YES"/>
                                                     <font key="font" metaFont="system"/>
                                                 </buttonCell>
                                                 <connections>
-                                                    <action selector="btnShowSecondBar_clicked:" target="XfG-lQ-9wD" id="pH2-0a-Ege"/>
+                                                    <action selector="btnShowSecondBarClicked:" target="XfG-lQ-9wD" id="pH2-0a-Ege"/>
                                                 </connections>
                                             </button>
                                         </subviews>
@@ -950,7 +949,7 @@
                                             <font key="font" metaFont="system"/>
                                         </buttonCell>
                                         <connections>
-                                            <action selector="btnTrashIcon_clicked:" target="XfG-lQ-9wD" id="r6M-mW-Sbh"/>
+                                            <action selector="btnTrashIconClicked:" target="XfG-lQ-9wD" id="r6M-mW-Sbh"/>
                                         </connections>
                                     </button>
                                 </subviews>
